@@ -1,7 +1,7 @@
 Package: party
 Title: A Laboratory for Recursive Partytioning
-Date: 2015-11-04
-Version: 1.0-25
+Date: 2016-11-07
+Version: 1.1-0
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org"),
              person("Kurt", "Hornik", role = "aut"),
@@ -26,7 +26,7 @@ Depends: R (>= 2.14.0), methods, grid, stats, mvtnorm (>= 1.0-2), modeltools (>=
   strucchange
 LinkingTo: mvtnorm
 Imports: survival (>= 2.37-7), coin (>= 1.1-0), zoo, sandwich (>= 1.1-1)
-Suggests: TH.data (>= 1.0-3), mlbench, colorspace, MASS, vcd, ipred
+Suggests: TH.data (>= 1.0-3), mlbench, colorspace, MASS, vcd, ipred, libcoin
 LazyData: yes
 License: GPL-2
 URL: http://party.R-forge.R-project.org
