@@ -1,4 +1,9 @@
 
+                CHANGES IN party VERSION 1.0-26 (2016-09-01)
+
+    o    compare with libcoin instead of coin
+
+
                 CHANGES IN party VERSION 1.0-25 (2015-11-04)
 
     o    remove show from export
